<resources>
    <string name="app_name">Weather6</string>
    <string name="weather_app">Weather App</string>
    <string name="textViewWeather">Выберите источник погоды</string>
    <string name="openweather">OpenWeather</string>
    <string name="buttonYandex">Yandex</string>
    <string name="buttonGoogle">Google</string>
    <string name="buttonForecast">Прогноз погоды</string>
    <string name="errorName">Введите название города</string>
    <string name="text_pressure">Атмосферное давление</string>
    <string name="hud_text">Влажность</string>
    <string name="wind_text">Скорость ветра</string>
    <string name="feels_like">Ощущается</string>
    <string name="maxTemp">Макс. температура</string>
    <string name="minTemp">Мин. температура</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helpers"><center><b>Как пользоваться?\n</b></center>
                               <b>Назначение кнопок:\n</b>
                               \n<b>OpenWeather</b> - Просмотр текущей погоды с одноименного сервиса.\n
                               <b>Yandex</b> - просмотр текущей погоды предоставленной Яндексом.\n
                               <b>Прогноз</b> - просмотр прогноза, а также текущей погоды.\n
                                \n
                               <b>Инструкция:</b>\n
                               \n1) Ввести необходимый город в поле для ввода текста на русском языке\n
                               2) нажать на нужную вам кнопку\n
                               3) Смотреть погоду"</string>


</resources>