<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/weather_app"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_light_italic"

            android:minHeight="48dp"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icons8100"
            app:tint="@android:color/white"
            />

        <TextView
            android:id="@+id/textViewWeather"
            android:layout_width="217dp"
            android:layout_height="33dp"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/textViewWeather"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonOW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#3EB8EF"
            android:elevation="15dp"
            android:fontFamily="@font/merriweather_light"
            android:onClick="btnOWonClick"
            android:stateListAnimator="@null"

            android:text="@string/openweather"
            android:translationZ="10dp" />

        <Button
            android:id="@+id/buttonY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#3EB8EF"
            android:fontFamily="@font/merriweather_light"
            android:onClick="btnYonClick"
            android:text="@string/buttonYandex" />

        <Button
            android:id="@+id/buttonForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Прогноз"
            android:onClick="btnGonClick"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>